# ldb-rs

./: .cursorignore  .gitignore  Cargo.toml  README.md  codecov.yml
.cursor/: README.md
.cursor/rules/: cursor-agent.mdc  general-common.mdc  general-rust.mdc  git-workflow.mdc  project-conventions.mdc
.cursor/skills/rust-verify/: SKILL.md
.github/workflows/: ci.yml
doc/: README.md  api.md  architecture.md  guide.md  roadmap.md
ldb/: Cargo.toml
ldb-bench/: Cargo.toml
ldb-bench/benches/: crud_compare.rs  scenario_compare.rs
ldb-bench/preview/: overview.html
ldb-bench/scripts/: gen_overview.py
ldb-bench/src/: ddl.rs  filter_sql.rs  lib.rs  model.rs  scenario.rs  schema_diesel.rs  setup.rs
ldb-bench/src/backends/: diesel.rs  ldb.rs  mod.rs  ormlite.rs  rbatis.rs  seaorm.rs  sqlx_backend.rs  welds.rs
ldb-core/: Cargo.toml
ldb-core/benches/: crud_bench.rs
ldb-core/src/: config.rs  connect.rs  dialect.rs  engine.rs  error.rs  exec.rs  extra.rs  integration_support.rs  lib.rs  model.rs  mysql_dialect.rs  native.rs  on_conflict.rs  order.rs  pg_dialect.rs  query_build.rs  sql_build.rs  sql_value.rs  test_util.rs  where_builder.rs
ldb-core/src/crud/: common.rs  delete.rs  insert.rs  mod.rs  select.rs  update.rs
ldb-core/src/dialect/: dialect.rs  mysql_dialect.rs  pg_dialect.rs
ldb-core/tests/: integration_mysql.rs  integration_pg.rs
ldb-macros/: Cargo.toml
ldb-macros/src/: lib.rs
ldb/src/: lib.rs
ldb/tests/: model_derive.rs
