[package]
name = "ldb-bench"
description = "ldb 与常用 Rust ORM 的业务场景性能基准"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[lib]
name = "ldb_bench"
path = "src/lib.rs"

[features]
diesel = ["dep:diesel", "dep:diesel-async"]

[dependencies]
ldb-core = { workspace = true, features = ["integration", "test-util", "mysql", "postgres"] }
tokio = { workspace = true }
sqlx = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }

sea-orm = { version = "~1.1", features = [
    "sqlx-mysql",
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
] }

diesel = { version = "2.2", features = ["mysql", "postgres", "chrono"], optional = true }
diesel-async = { version = "0.5", features = ["mysql", "postgres", "deadpool"], optional = true }

welds = { version = "0.5", features = ["mysql", "postgres"] }
# welds-connections 使用 sqlx 0.9 但未启用 runtime；别名依赖打开 feature 统一
welds-sqlx = { package = "sqlx", version = "0.9", default-features = false, features = [
    "runtime-tokio",
    "tls-rustls",
    "mysql",
    "postgres",
] }

rbatis = { version = "4.6", features = ["rbatis-macro-driver"] }
rbdc-mysql = { version = "4.6" }
rbdc-pg = { version = "4.6" }
rbs = { version = "4.6" }

ormlite = { version = "0.24", default-features = false, features = [
    "mysql",
    "postgres",
    "runtime-tokio-rustls",
] }

[dev-dependencies]
criterion = { version = "0.5", features = ["async_tokio", "html_reports"] }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }

[[bench]]
name = "scenario_compare"
harness = false
