[package]
name = "ldb-macros"
description = "ldb 过程宏：#[derive(LdbModel)]"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = true

[lib]
proc-macro = true
path = "src/lib.rs"

[dependencies]
syn = { workspace = true }
quote = { workspace = true }
proc-macro2 = { workspace = true }
